# esp-swift-matter

./: CLAUDE.md  CMakeLists.txt  README.md  TODO.md  esp_matter.patch  idf_component.yml  module.modulemap  project_include.cmake
src/Endpoints/ClosureEndpoint/: ClosureEndpoint.swift  matter_closure.cpp  matter_closure.h
src/Endpoints/HumiditySensorEndpoint/: HumiditySensorEndpoint.swift  matter_humidity_sensor.cpp  matter_humidity_sensor.h
src/Endpoints/ModeSelectEndpoint/: ModeSelectEndpoint.swift  matter_mode_select.cpp  matter_mode_select.h
src/Endpoints/PowerSourceEndpoint/: PowerSourceEndpoint.swift  matter_power_source.cpp  matter_power_source.h
src/Endpoints/PressureSensorEndpoint/: PressureSensorEndpoint.swift  matter_pressure_sensor.cpp  matter_pressure_sensor.h
src/Endpoints/TemperatureSensorEndpoint/: TemperatureSensorEndpoint.swift  matter_temperature_sensor.cpp  matter_temperature_sensor.h
src/Endpoints/WaterValveEndpoint/: WaterValveEndpoint.swift  matter_water_valve.cpp  matter_water_valve.h
src/FactoryData/: MatterFactoryData.swift
src/MatterDevice/: MatterDevice.swift  matter.h  matter_core.cpp  matter_core.h
src/RootClusters/TimeSynchronization/: TimeSynchronization.swift  matter_time_synchronization.cpp  matter_time_synchronization.h
test-app/: CMakeLists.txt
test-app/main/: CMakeLists.txt  TestMatter.swift  idf_component.yml  main.swift
